--- a/src/index.qmd
+++ b/src/index.qmd
@@ -1,16 +1,16 @@
 ---
-description: "Description"
+description: "This course covers the basics of writing and evaluating Monte Carlo simulations in data science: best practices, Python implementations"
 open-graph:
-    description: "Description" 
+    description: "This course covers the basics of writing and evaluating Monte Carlo simulations in data science: best practices, Python implementations" 
 ---
 
-# Title
+# Fundamentals of Simulations in Data Science
 
 
 
-<img src="images/ecm-2-header-img.png" alt="Advanced Econometrics" style="width: 100%;  border-radius: 15px; margin-bottom: 6px;">
+<img src="images/00201-3654134141.png" alt="Simulations" style="width: 100%;  border-radius: 15px; margin-bottom: 6px;">
 
-Description 
+ 
 
 ## Course Information
   
@@ -19,15 +19,15 @@ Description
 **Office Location:** Adenauerallee 24-42, IFS, Statistics Section\
 **Office Hours:** Virtual, by appointment\
 **Course Website:** eCampus and this website\
-**Lectures:** 8:30-10:00; Wednesdays (Room 0.042), Fridays (Lecture Hall N)\
+**Meeting times:** Room 0.042: 14:00-16:00, Wednesdays; 08:30-10:00, Fridays
 **Schedule Changes and Holidays**: See eCampus and BASIS\
-**DOI**: [![DOI](https://img.shields.io/badge/DOI-10.5281%2Fzenodo.15463535-gold)](https://doi.org/10.5281/zenodo.15463535)
+<!-- **DOI**: [![DOI](https://img.shields.io/badge/DOI-10.5281%2Fzenodo.15463535-gold)](https://doi.org/10.5281/zenodo.15463535) -->
 
-**Level:** Undergraduate\
-**Prerequisites:** basic courses in statistics and econometrics
+**Level:** master's
+**Prerequisites:** coursework in econometrics and statistics
 
-**Course source code:** [![GitHub](https://img.shields.io/badge/GitHub-%23121011.svg?style=flat&logo=github&logoColor=white)](https://github.com/vladislav-morozov/econometrics-2) \
-**Applications in:** [![Python](https://img.shields.io/badge/python-ffdd54?style=flat&logo=python&logoColor=3776AB)](https://www.python.org/)
+**Course source code:** [![GitHub](https://img.shields.io/badge/GitHub-%23121011.svg?style=flat&logo=github&logoColor=white)](https://github.com/vladislav-morozov/simulations-course) \
+**Simulations in:** [![Python](https://img.shields.io/badge/python-ffdd54?style=flat&logo=python&logoColor=3776AB)](https://www.python.org/)
 
 ### In Slide Form
  
@@ -47,14 +47,14 @@ The course is structured as follows:
 
 ## Course Materials
 
-**Textbooks:** 
+
  
 ## Course Policies
 
 
 ### Grading and Evaluation
 
-The final grade for this course is based o 
+The final grade for this course is based on
  
 ### Policies and Additional Information
 
