--- a/src/eco.bib
+++ b/src/eco.bib
@@ -1,3 +1,45 @@
+@book{Dormann2025StatisticsSimulationSynthetic,
+  title = {Statistics by {{Simulation}}: {{A Synthetic Data Approach}}},
+  shorttitle = {Statistics by Simulation},
+  author = {Dormann, Carsten F. and Ellison, Aaron M.},
+  year = {2025},
+  publisher = {Princeton University Press},
+  address = {Princeton Oxford},
+  abstract = {"An accessible guide to understanding statistics using simulations, with examples from a range of scientific disciplines Real-world challenges such as small sample sizes, skewed distributions of data, biased sampling designs, and more predictors than data points are pushing the limits of classical statistical analysis. This textbook provides a new tool for the statistical toolkit: data simulations. It shows that using simulation and data-generating models is an excellent way to validate statistical reasoning and to augment study design and statistical analysis with planning and visualization. Although data simulations are not new to professional statisticians, Statistics by Simulation makes the approach accessible to a broader audience, with examples from many fields. It introduces the reasoning behind data simulation and then shows how to apply it in planning experiments or observational studies, developing analytical workflows, deploying model diagnostics, and developing new indices and statistical methods. - Covers all steps of statistical practice, from planning projects to post-hoc analysis and model checking - Provides examples from disciplines including sociology, psychology, ecology, economics, physics, and medicine - Includes R code for all examples, with data and code freely available online - Offers bullet-point outlines and summaries of each chapter - Minimizes the use of jargon and requires only basic statistical background and skills"-- Provided by publisher},
+  isbn = {978-0-691-25877-5 978-0-691-27389-1},
+  langid = {english}
+}
+
+@book{Lutz2025LearningPythonPowerful,
+  title = {Learning {{Python}}: {{Powerful Object-Oriented Programming}}},
+  shorttitle = {Learning {{Python}}},
+  author = {Lutz, Mark},
+  year = {2025},
+  edition = {Sixth edition},
+  publisher = {O'Reilly},
+  address = {Santa Rosa, CA},
+  isbn = {978-1-0981-7130-8 978-1-0981-7126-1},
+  langid = {english}
+}
+
+@book{Skoulikari2023LearningGitHandson,
+  title = {Learning {{Git}}: A {{Hands-on}} and {{Visual Guide}} to the {{Basics}} of {{Git}}},
+  shorttitle = {Learning {{Git}}},
+  author = {Skoulikari, Anna},
+  year = {2023},
+  edition = {First edition},
+  publisher = {O'Reilly},
+  address = {Beijing Boston Farnham Sebastopol Tokyo},
+  isbn = {978-1-0981-3391-7 978-1-0981-3388-7},
+  langid = {english}
+}
+
+@book{Wager2024CausalInferenceStatistical,
+  title = {Causal {{Inference}}: {{A Statistical Learning Approach}}},
+  author = {Wager, Stefan},
+  year = {2024}
+}
+
 @article{Chernozhukov2019InferenceCausalStructural,
   title = {Inference on {{Causal}} and {{Structural Parameters}} Using {{Many Moment Inequalities}}},
   author = {Chernozhukov, Victor and Chetverikov, Denis and Kato, Kengo},
