--- a/src/index.qmd
+++ b/src/index.qmd
@@ -23,7 +23,7 @@ open-graph:
 **Schedule Changes and Holidays**: See eCampus and BASIS\
 <!-- **DOI**: [![DOI](https://img.shields.io/badge/DOI-10.5281%2Fzenodo.15463535-gold)](https://doi.org/10.5281/zenodo.15463535) -->
 
-**Level:** master's
+**Level:** master's \
 **Prerequisites:** coursework in econometrics and statistics
 
 **Course source code:** [![GitHub](https://img.shields.io/badge/GitHub-%23121011.svg?style=flat&logo=github&logoColor=white)](https://github.com/vladislav-morozov/simulations-course) \
