Add writing resources

--- a/src/eco.bib
+++ b/src/eco.bib
@@ -1,3 +1,41 @@
+@book{Alley2013CraftScientificPresentations,
+  title = {The {{Craft}} of {{Scientific Presentations}}: {{Critical Steps}} to {{Succeeed}} and {{Critical Errors}} to {{Avoid}}},
+  shorttitle = {The Craft of Scientific Presentations},
+  author = {Alley, Michael},
+  year = {2013},
+  edition = {2. ed},
+  publisher = {Springer},
+  address = {New York, NY},
+  abstract = {The Craft of Scientific Presentations, 2nd edition aims to strengthen you as a presenter of science and engineering. The book does so by identifying what makes excellent presenters such as Brian Cox, Jane Goodall, Richard Feynman, and Jill Bolte Taylor so strong. In addition, the book explains what causes so many scientific presentations to flounder.One of the most valuable contributions of this text is that it teaches the assertion-evidence approach to scientific presentations. Instead of building presentations, as most engineers and scientists do, on the weak foundation of topic phrases and},
+  isbn = {978-1-4419-8278-0 978-1-4419-8279-7},
+  langid = {english}
+}
+
+@article{Nikolov2022WritingTipsEconomics,
+  title = {Writing {{Tips}} for {{Economics Research Papers}}:  2021-2022 {{Edition}}},
+  author = {Nikolov, Plamen},
+  year = {2022},
+  journal = {SSRN Electronic Journal},
+  issn = {1556-5068},
+  doi = {10.2139/ssrn.4114601},
+  urldate = {2025-10-12},
+  langid = {english},
+  file = {C:\Users\moren\Zotero\storage\E2SNXBAP\Nikolov - 2022 - Writing Tips for Economics Research Papers  2021-2022 Edition.pdf}
+}
+
+@book{Schimel2012WritingScienceHow,
+  title = {Writing {{Science}}: {{How}} to {{Write Papers That Get Cited}} and {{Proposals That Get Funded}}},
+  shorttitle = {Writing Science},
+  editor = {Schimel, Joshua},
+  year = {2012},
+  publisher = {Oxford University Press},
+  address = {Oxford New York},
+  abstract = {"As a scientist, you are a professional writer: your career is built on successful proposals and papers. Success isn't defined by getting papers into print, but by getting them into the reader's consciousness. Writing Science is built upon the idea that successful science writing tells a story. It uses that insight to discuss how to write more effectively. Integrating lessons from other genres of writing with those from the author's years of experience as author, reviewer, and editor, the book shows scientists and students how to present their research in a way that is clear and that will maximize reader comprehension. The book takes an integrated approach, using the principles of story structure to discuss every aspect of successful science writing, from the overall structure of a paper or proposal to individual sections, paragraphs, sentences, and words. It begins by building core arguments, analyzing why some stories are engaging and memorable while others are quickly forgotten, and proceeds to the elements of story structure, showing how the structures scientists and researchers use in papers and proposals fit into classical models. The book targets the internal structure of a paper, explaining how to write clear and professional sections, paragraphs, and sentences in a way that is clear and compelling. The ideas within a paper should flow seamlessly, drawing readers along. The final section of the book deals with special challenges, such as how to discuss research limitations and how to write for the public. Writing Science is a much-needed guide to succeeding in modern science. Its insights and strategies will equip science students, scientists, and professionals across a wide range of scientific and technical fields with the tools needed to communicate effectively."--Provided by publisher},
+  isbn = {978-0-19-976023-7 978-0-19-990951-3 978-1-283-42787-6},
+  langid = {english}
+}
+
+
 @book{Dormann2025StatisticsSimulationSynthetic,
   title = {Statistics by {{Simulation}}: {{A Synthetic Data Approach}}},
   shorttitle = {Statistics by Simulation},
