--- a/src/index.qmd
+++ b/src/index.qmd
@@ -4,7 +4,7 @@ open-graph:
     description: "This course covers the basics of writing and evaluating Monte Carlo simulations in data science: best practices, Python implementations" 
 ---
 
-# Fundamentals of Simulations in Data Science
+# Fundamentals of Monte Carlo Simulations in Data Science
 
 
 
@@ -62,7 +62,7 @@ This course is self-contained with respect to simulations, and the lecture mater
 
 ### Project Resources
 
-For the course project, students are encouraged to analyze methods at the level of modern advanced textbooks The choice of topic is flexible, subject to feasibility. The following texts may inspire project ideas:
+For the course project, students are encouraged to analyze methods at the level of modern advanced textbooks. The choice of topic is flexible, subject to feasibility. The following texts may inspire project ideas:
 
 - Chernozhukov, Victor, Christian Hansen, Nathan Kallus, Martin Spindler, and Vasilis Syrgkanis. 2024. *Applied Causal Inference Powered by ML and AI.*
 - Gaillac, Christophe, and Jeremy L’Hour. 2025. *Machine Learning for Econometrics*. Oxford University Press.
